--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -24,7 +24,8 @@
     "noEmit": true,
     "incremental": true,
     "resolveJsonModule": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+	"strictNullChecks": false
   },
   "include": [
     "next-env.d.ts",
